# PetFinder_solution

./: .gitignore  Makefile  README.md  docker-compose.yaml  pyproject.toml
src/: dataset.py  main.py  preprocessing.py  requirements.txt
src/models/: swint.py
src/utils/: misc.py
