[tool.poetry]
name = "petfinder_solution"
version = "0.1.0"
description = ""
authors = ["masaponto"]

[tool.poetry.dependencies]
python = "^3.7 <3.8"
numpy = "^1.21.4"
GitPython = "^3.1.24"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
